<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perceptioncheck">

    <EditText
        android:id="@+id/characterName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:background="@color/textbackground"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterName"
        android:layout_centerHorizontal="true"
        android:text="@string/char_name"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/characterAge"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:background="@color/textbackground"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/characterRace"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_toRightOf="@id/characterAge"
        android:layout_marginLeft="20dp"
        android:background="@color/textbackground"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/characterClass"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_toRightOf="@id/characterRace"
        android:layout_marginLeft="20dp"
        android:background="@color/textbackground"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterAge"
        android:text="@string/age"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignLeft="@id/characterAge"
        android:layout_alignRight="@id/characterAge"
        android:gravity="center"/>
    <TextView
        android:id="@+id/raceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterRace"
        android:text="@string/race"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignLeft="@id/characterRace"
        android:layout_alignRight="@id/characterRace"
        android:gravity="center"/>
    <TextView
        android:id="@+id/classLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characterClass"
        android:text="@string/char_class"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignLeft="@id/characterClass"
        android:layout_alignRight="@id/characterClass"
        android:gravity="center"/>
<TextView
    android:id="@+id/strLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/ageLabel"
    android:layout_alignParentLeft="true"
    android:text="@string/Str"
    android:textColor="#ffffff"
    android:textStyle="bold"
    android:textSize="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="20dp"
    android:layout_alignLeft="@id/ageLabel"
    android:layout_alignRight="@id/ageLabel"
    android:gravity="center"
    />
    <TextView
        android:id="@+id/dexLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/strLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/Dex"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@id/ageLabel"
        android:layout_alignRight="@id/ageLabel"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/conLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dexLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/Con"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@id/ageLabel"
        android:layout_alignRight="@id/ageLabel"
        android:gravity="center"/>
    <TextView
        android:id="@+id/intLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/Int"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@id/ageLabel"
        android:layout_alignRight="@id/ageLabel"
        android:gravity="center"/>
    <TextView
        android:id="@+id/wisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/Wis"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@id/ageLabel"
        android:layout_alignRight="@id/ageLabel"
        android:gravity="center"/>
    <TextView
        android:id="@+id/chaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wisLabel"
        android:layout_alignParentLeft="true"
        android:text="@string/Cha"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignLeft="@id/ageLabel"
        android:layout_alignRight="@id/ageLabel"
        android:gravity="center"/>
    <EditText
        android:id="@+id/characterStr"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/strLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/characterDex"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/dexLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/characterCon"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/characterInt"
        android:layout_below="@id/raceLabel"
        android:layout_alignBaseline="@id/conLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="21dp"
        android:background="@color/textbackground"
        android:inputType="number"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/characterInt"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/intLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/characterWis"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/wisLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/characterCha"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/chaLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:clickable="false"/>
    <EditText
        android:id="@+id/strModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/strLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/dexModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/dexLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/conModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/conLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/intModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/intLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/wisModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/wisLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/chaModifier"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/classLabel"
        android:layout_alignBaseline="@id/chaLabel"
        android:inputType="number"
        android:background="@color/textbackground"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/classLabel"
        android:layout_alignRight="@id/classLabel"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/spellTrackerButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/characterCha"
        android:layout_marginTop="20dp"
        android:onClick="toSpellTracker"
        android:background="@drawable/spellsbtn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/stats"
        android:textColor="#ffffff"
        android:layout_below="@id/raceLabel"
        android:layout_alignLeft="@id/raceLabel"
        android:layout_alignRight="@id/raceLabel"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/modifier"
        android:textColor="#ffffff"
        android:layout_below="@id/classLabel"
        android:layout_alignStart="@id/classLabel"
        android:layout_alignEnd="@id/classLabel"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ImageButton
        android:id="@+id/createCharacter"
        android:layout_width="50dp"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:onClick="lockTexts" />
</RelativeLayout>